--- a/src/hiper.html
+++ b/src/hiper.html
@@ -89,9 +89,9 @@
             <h3 class="txt-est">10 - 15 min</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">2° - Agachamento Adutores</h2>
-            <img src="/gif/squad.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">4x Até à Falha</h3>
+            <h2 class="s-1">2° - Cadeira Extensora</h2>
+            <img src="/gif/cadeira-extensora.webp" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">4x 10 - 15 rep</h3>
         </div>
         <div class="est">
             <h2 class="s-1">3° - Levantamento Terra</h2>
@@ -124,7 +124,12 @@
             <h3 class="txt-est">4x 10 - 12 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">9° - Abs Supra</h2>
+            <h2 class="s-1">9° - Mesa Flexora</h2>
+            <img src="/gif/mesa-flexora.webp" alt="" id="img-est" height="200px">
+            <h3 class="txt-est">3x 10 - 12 rep</h3>
+        </div>
+        <div class="est">
+            <h2 class="s-1">10° - Abs Supra</h2>
             <img src="/gif/abs.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">10x 10 GVT</h3>
         </div>
@@ -137,47 +142,42 @@
             <h3 class="txt-est">10 - 15 min</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">2° - Flexão de Braços</h2>
-            <img src="/gif/pushup.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">3x 6 - 8 rep</h3>
-        </div>
-        <div class="est">
-            <h2 class="s-1">3° - Rosca Alternada</h2>
+            <h2 class="s-1">2° - Rosca Alternada</h2>
             <img src="/gif/alternada.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 10 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">4° - Rosca Invertida</h2>
+            <h2 class="s-1">3° - Rosca Invertida</h2>
             <img src="/gif/ante.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 10 - 12 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">5° - Barra Fixa</h2>
+            <h2 class="s-1">4° - Barra Fixa</h2>
             <img src="/gif/pull-up.gif" alt="" id="img-est" height="200px">
-            <h3 class="txt-est">15x Até à Falha</h3>
+            <h3 class="txt-est">5x Até à Falha</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">6° - Rosca Martelo</h2>
+            <h2 class="s-1">5° - Rosca Martelo</h2>
             <img src="/gif/hammer.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">7° - Flexão de Punho</h2>
+            <h2 class="s-1">6° - Flexão de Punho</h2>
             <img src="/gif/wrist-curl.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">8° - Extensão de Punho</h2>
+            <h2 class="s-1">7° - Extensão de Punho</h2>
             <img src="/gif/extensao-punho.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">9° - Remada Curv. Pronada</h2>
+            <h2 class="s-1">8° - Remada Curv. Pronada</h2>
             <img src="/gif/Barbell-Bent-Over-Row.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">3x 12 - 15 rep</h3>
         </div>
         <div class="est">
-            <h2 class="s-1">10° - Rosca Direta Barra</h2>
+            <h2 class="s-1">9° - Rosca Direta Barra</h2>
             <img src="/gif/Barbell-Curl.gif" alt="" id="img-est" height="200px">
             <h3 class="txt-est">7x 8 - 12 rep FST-7</h3>
         </div>
